# OAKonKhadas

./: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  OAKonKhadas.cpp  OAKonKhadas.hpp  Xoxe.cpp  Xoxe.hpp
